; ModuleID = '/home/carl/AnghaBench/RetroArch/cores/libretro-ffmpeg/extr_ffmpeg_fft.c_fft_init_quad_vao.c'
source_filename = "/home/carl/AnghaBench/RetroArch/cores/libretro-ffmpeg/extr_ffmpeg_fft.c_fft_init_quad_vao.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@fft_init_quad_vao.quad_buffer = internal constant [16 x i32] [i32 -1, i32 -1, i32 1, i32 -1, i32 -1, i32 1, i32 1, i32 1, i32 0, i32 0, i32 1, i32 0, i32 0, i32 1, i32 1, i32 1], align 16
@GL_ARRAY_BUFFER = common dso_local global i32 0, align 4
@GL_STATIC_DRAW = common dso_local global i32 0, align 4
@GL_BYTE = common dso_local global i32 0, align 4
@GL_FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @fft_init_quad_vao to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fft_init_quad_vao(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %3 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %5 = call i32 @glGenBuffers(i32 1, i32* %4)
  %6 = load i32, i32* @GL_ARRAY_BUFFER, align 4
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @glBindBuffer(i32 %6, i32 %9)
  %11 = load i32, i32* @GL_ARRAY_BUFFER, align 4
  %12 = load i32, i32* @GL_STATIC_DRAW, align 4
  %13 = call i32 @glBufferData(i32 %11, i32 64, i32* getelementptr inbounds ([16 x i32], [16 x i32]* @fft_init_quad_vao.quad_buffer, i64 0, i64 0), i32 %12)
  %14 = load i32, i32* @GL_ARRAY_BUFFER, align 4
  %15 = call i32 @glBindBuffer(i32 %14, i32 0)
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 1
  %18 = call i32 @glGenVertexArrays(i32 1, i32* %17)
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @glBindVertexArray(i32 %21)
  %23 = load i32, i32* @GL_ARRAY_BUFFER, align 4
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @glBindBuffer(i32 %23, i32 %26)
  %28 = call i32 @glEnableVertexAttribArray(i32 0)
  %29 = call i32 @glEnableVertexAttribArray(i32 1)
  %30 = load i32, i32* @GL_BYTE, align 4
  %31 = load i32, i32* @GL_FALSE, align 4
  %32 = call i32 @glVertexAttribPointer(i32 0, i32 2, i32 %30, i32 %31, i32 0, i32* null)
  %33 = load i32, i32* @GL_BYTE, align 4
  %34 = load i32, i32* @GL_FALSE, align 4
  %35 = call i32 @glVertexAttribPointer(i32 1, i32 2, i32 %33, i32 %34, i32 0, i32* inttoptr (i64 8 to i32*))
  %36 = call i32 @glBindVertexArray(i32 0)
  %37 = load i32, i32* @GL_ARRAY_BUFFER, align 4
  %38 = call i32 @glBindBuffer(i32 %37, i32 0)
  ret void
}

declare dso_local i32 @glGenBuffers(i32, i32*) #1

declare dso_local i32 @glBindBuffer(i32, i32) #1

declare dso_local i32 @glBufferData(i32, i32, i32*, i32) #1

declare dso_local i32 @glGenVertexArrays(i32, i32*) #1

declare dso_local i32 @glBindVertexArray(i32) #1

declare dso_local i32 @glEnableVertexAttribArray(i32) #1

declare dso_local i32 @glVertexAttribPointer(i32, i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
